# bertrand

./: .gitignore  .travis.yml  Bertrand.v  Extraction.v  Knuth_def.v  Knuth_why.v  Makefile  Makefile.coq.local  Prime.v  PrimeDirac.v  README.md  _CoqProject  coq-bertrand.opam  coq-knuth-prime-whyml.opam  coq-knuth-prime.opam  default.nix  dune  dune-project  meta.yml  opam
.github/workflows/: coq-ci.yml  docker-action.yml  replay-why3.yml
ocaml/: Extraction.v  dune  ex2.ml
theories/: Bertrand.v  Binomial.v  Check128.v  Div.v  DivDirac.v  Divides.v  Factorial_bis.v  Gcd.v  Misc.v  Partition.v  Power.v  PowerBinomial.v  PowerDiv.v  Prime.v  PrimeDirac.v  Product.v  Raux.v  Summation.v  dune
why/: Knuth.mlw  Makefile  README.md  WhyArrays.v
why/Knuth/: Knuth_Knuth_h_4.v  Knuth_Knuth_h_5.v  Knuth_Knuth_h_6.v  Knuth_Knuth_primeqtvc_1.v  why3session.xml
