opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/bertrand"
dev-repo: "git+https://github.com/coq-community/bertrand.git"
bug-reports: "https://github.com/coq-community/bertrand/issues"
license: ""

synopsis: ""
description: """
A proof of correctness of the algorithm as described in
"The Art of Computer Programming: Fundamental Algorithms"
by Knuth, pages 147-149.
"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {(>= "8.8" & < "8.9~")}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs based on external tools"
  "category:Miscellaneous/Extracted Programs/Arithmetic"
  "keyword:Knuth's algorithm"
  "keyword:prime numbers"
  "keyword:Bertrand's postulate"
  "logpath:Bertrand"
]
authors: [
  "Laurent Théry"
]
