opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/bertrand"
dev-repo: "git+https://github.com/coq-community/bertrand.git"
bug-reports: "https://github.com/coq-community/bertrand/issues"
license: "LGPL-2.1-or-later"

synopsis: "Correctness of a WhyML implementation of Knuth's algorithm for prime numbers"
description: """
A proof of correctness of a WhyML implementation of the algorithm
for computing prime numbers as described in "The Art of Computer Programming:
Fundamental Algorithms" by Knuth, pp. 147-149."""

build: [
  ["why3" "config" "detect"]
  [make "why"]
]
depends: [
  "coq" {= "8.13.2"}
  "why3" {= "1.4.1"}
  "why3-coq" {= "1.4.1"}
  "alt-ergo" {= "2.4.1"}
  "coq-bertrand" {= version}
]

tags: [
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs based on external tools"
  "keyword:Knuth's algorithm"
  "keyword:Bertrand's postulate"
]
authors: [
  "Laurent Théry"
]
