opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/bertrand"
dev-repo: "git+https://github.com/coq-community/bertrand.git"
bug-reports: "https://github.com/coq-community/bertrand/issues"
license: "LGPL-2.1-or-later"

synopsis: "Correctness of a WhyML implementation of Knuth's algorithm for prime numbers"
description: """
A proof of correctness of a WhyML implementation of the algorithm
for computing prime numbers as described in "The Art of Computer Programming:
Fundamental Algorithms" by Knuth, pp. 147-149.
"""

build: [make "why"]
depends: [
  "coq" {= "8.12.1"}
  "why3" {= "1.3.3"}
  "why3-coq" {= "1.3.3"}
  "alt-ergo" {= "2.3.3"}
  "coq-bertrand" {= version}
]

authors: [
  "Laurent Théry"
]
